FIN CRUD VALIDACION JWT

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 DB_CNN = mongodb+srv://administrador:ADOtata159@cluster0.wl8oj.mongodb.net/hospitaldb
+JWT_SECRET=sdfsdfsd$5223#"4f43615
